[package]
name = "btree"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
dbg = { git = "https://github.com/ngtkana/ac-adapter-rs.git", package = "dbg" }

[dev-dependencies]
rand = "0.7.3"
yansi = "0.5.0"
