[package]
name = "fibonacci_heap"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paren = { path = "../paren" }
itertools = "0.9.0"

[dev-dependencies]
yansi = "0.5.0"
rand = "0.7.3"
