[package]
name = "van_emde_boas"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbg = { git = "https://github.com/ngtkana/ac-adapter-rs.git", package = "dbg" }

[dev-dependencies]
yansi = "0.5.0"
rand = "0.7.3"
